--- a/UI/index.html
+++ b/UI/index.html
@@ -54,6 +54,9 @@
  </form>   
 
 
-
+<script type="text/javascript">
+	var tooltip = document.getElementById("firstadminitem");
+	tip(tooltip);
+</script>
 </body>
 </html>
