Name of file in previous commit is index.html not Signin.html

--- a/UI/index.html
+++ b/UI/index.html
@@ -52,7 +52,7 @@
 </div>
 
  </form>   
-
+<!--Name of file is index-->
 
 <script type="text/javascript">
 	var tooltip = document.getElementById("firstadminitem");
