--- a/UI/customer-order-history.html
+++ b/UI/customer-order-history.html
@@ -47,7 +47,7 @@
     <td>Qwerty Ajala</td>
     <td>Iyan and Eforiro</td>
     <td>YYYY-MM-DD HH:MI:SS.</td>
-    <td class="makered">Pending *</td>
+    <td class="makegreen">Delivered</td>
   </tr>
   <tr>
     <td>Qwerty Ajala</td>
@@ -78,7 +78,7 @@
   </tr>
 
   <tfoot>
-  	<td class="makered"> * dispatch would send a delivery confirmation upon delivery</td>
+  	<td class="makegreen"> * all orders here have been successfully delivered.</td>
   	<td></td>
   	<td></td>
   	<td></td>
