Edited navbar items on pages

--- a/UI/admin/admin-order-history.html
+++ b/UI/admin/admin-order-history.html
@@ -15,10 +15,8 @@
 	<ul>
 		<li class="beautify">Book-A-Meal</li>
 	<li><a href="#">Home</a></li>
-    <li><a href="#">Make Order</a></li>
-    <li><a href="#">Order Summary</a></li>
-    <li><a href="#">Order History</a></li>
-    
+    <li><a href="#">Admin Management</a></li>
+   <li><a href="#">All Order History</a></li>
     
 	
 	
@@ -34,7 +32,7 @@
 
 <div class="mycontainer">
 	<h2>Admin Order History</h2>
-<h4>Here is a history of all your orders From Various Clients so far. </h4>
+<h4>Here is a history of all your orders from various customers so far. </h4>
 <p class="makered"><b>NB: Deleted * orders cannot be gotten back. Be cautious!</b></p>
 
 <table style="width:80%">
