--- a/UI/admin/login.html
+++ b/UI/admin/login.html
@@ -14,10 +14,11 @@
 <div class="left">
 	<ul>
 		<li class="beautify">Book-A-Meal</li>
-	<li><a href="#">Home</a></li>
-    <li><a href="#">Admin Management</a></li>
-    <li><a href="#">All Order History</a></li>
-  
+	<li><a href="login.html">Home</a></li>
+    <li><a href="admin-management.html">Admin Management</a></li>
+    <li><a href="admin-order-history.html">All Order History</a></li>
+	
+	
     
 	
 	
@@ -26,7 +27,7 @@
 </div>
 
 <div class="right" >
-	<p><a href="#" target="_blank">View Site</a></p>
+	<p><a href="../index.html" target="_blank">View Site</a></p>
 </div>
 
 </div>
