--- a/UI/admin/set-daily-menu.html
+++ b/UI/admin/set-daily-menu.html
@@ -14,20 +14,17 @@
 <div class="left">
 	<ul>
 		<li class="beautify">Book-A-Meal</li>
-	<li><a href="#">Home</a></li>
-    <li><a href="#">Make Order</a></li>
-    <li><a href="#">Order Summary</a></li>
-    <li><a href="#">Order History</a></li>
-    
-    
-	
+	<li><a href="login.html">Home</a></li>
+    <li><a href="admin-management.html">Admin Management</a></li>
+    <li><a href="admin-order-history.html">All Order History</a></li>
+  
 	
 	
 	</ul>
 </div>
 
 <div class="right" >
-	<p><a href="#" target="_blank">View Site</a></p>
+	<p><a href="../index.html" target="_blank">View Site</a></p>
 </div>
 
 </div>
