--- a/UI/order-summary.html
+++ b/UI/order-summary.html
@@ -14,10 +14,10 @@
 <div class="left">
 	<ul>
 		<li class="beautify">Book-A-Meal</li>
-	<li><a href="#">Home</a></li>
-    <li><a href="#">Make Order</a></li>
-    <li><a href="#">Order Summary</a></li>
-    <li><a href="#">Order History</a></li>
+	<li><a href="index.html">Home</a></li>
+    <li><a href="customer-order.html">Make Order</a></li>
+   <li><a href="order-summary.html">Order Summary</a></li>
+   <li><a href="customer-order-history.html">Order History</a></li>
     
     
 	
@@ -27,12 +27,13 @@
 </div>
 
 <div class="right" >
-	<p id="fifthadminitem"><a href="#" >Admin Login</a></p>
+	<p id="fifthadminitem"><a href="admin/login.html" >Admin Login</a></p>
 </div>
 
 </div>
 
 <div class="mycontainer">
+  <h3><a class="makegreen" href="customer-order.html">&#8592;Go Back?</a></h3>
 	<h2>View Current Order Summary</h2><br>
 
 <p class="makeorange"><b>NB: This page displays 'NO CURRENT ORDER!' if no order has been made.</b></p>
