--- a/UI/signup.html
+++ b/UI/signup.html
@@ -14,11 +14,10 @@
 <div class="left">
 	<ul>
 		<li class="beautify">Book-A-Meal</li>
-	<li><a href="#">Home</a></li>
-     <li><a href="#">Make Order</a></li>
-     <li><a href="#">Order Summary</a></li>
-    <li><a href="#">Order History</a></li>
-    
+	<li><a href="index.html">Home</a></li>
+    <li><a href="customer-order.html">Make Order</a></li>
+   <li><a href="order-summary.html">Order Summary</a></li>
+   <li><a href="customer-order-history.html">Order History</a></li>
     
 	
 	
@@ -27,13 +26,13 @@
 </div>
 
 <div class="right" >
-	<p id="secondadminitem"><a href="#" >Admin Login</a></p>
+	<p id="secondadminitem"><a href="admin/login.html" >Admin Login</a></p>
 </div>
 
 </div>
 
 <div class="mycontainer">
-	<h2>Already have an account? Login <a href="#" class="makeorange">here</a></h2>
+	<h2>Already have an account? Login <a href="index.html" class="makeorange">here</a></h2>
 
 	<div>
 		<label><b>Full Name</b></label><br>
