--- a/UI/customer-order.html
+++ b/UI/customer-order.html
@@ -51,6 +51,8 @@
 	</form>
 </div>
 
+<h4 class="lotsofspace">Logout <a href="#" class ="makeorange">here</a></h4>
+
 
 <script type="text/javascript">
 	var tooltip = document.getElementById("thirdadminitem");
