Additional touch up of pages

--- a/UI/admin/admin-order-history.html
+++ b/UI/admin/admin-order-history.html
@@ -99,6 +99,12 @@
 
 
 
+<div class="spacing"></div>
+<hr>
+<div class="centerfooter">
+  Copyright © 2018, <a href="../index.html" class="makeorange">book-a-meal</a> All Rights Reserved
+</div>
+
 
 <script type="text/javascript">
 	
