--- a/UI/admin/login.html
+++ b/UI/admin/login.html
@@ -67,6 +67,12 @@
 
  </form>   
 
+<div class="spacing"></div>
+<hr>
+<div class="centerfooter">
+  Copyright © 2018, <a href="../index.html" class="makeorange">book-a-meal</a> All Rights Reserved
+</div>
+
 
 <script type="text/javascript" src="../js/dommanipulation.js"></script>
  <script type="text/javascript">
