--- a/UI/order-summary.html
+++ b/UI/order-summary.html
@@ -82,9 +82,17 @@
 
 
 
+<div class="spacing"></div>
+<hr>
+<div class="centerfooter">
+  Copyright © 2018, <a href="index.html" class="makeorange">book-a-meal</a> All Rights Reserved
+</div>
+
 <script type="text/javascript">
 	var tooltip = document.getElementById("fifthadminitem");
 	tip(tooltip);
 </script>
+
+
 </body>
 </html>
