--- a/UI/admin/admin-management.html
+++ b/UI/admin/admin-management.html
@@ -140,6 +140,12 @@
 </div>
 
 
+<div class="spacing"></div>
+<hr>
+<div class="centerfooter">
+  Copyright © 2018, <a href="../index.html" class="makeorange">book-a-meal</a> All Rights Reserved
+</div>
+
 
 
 <script type="text/javascript">
