--- a/UI/admin/set-daily-menu.html
+++ b/UI/admin/set-daily-menu.html
@@ -121,6 +121,11 @@
 
 
 
+<div class="spacing"></div>
+<hr>
+<div class="centerfooter">
+  Copyright © 2018, <a href="../index.html" class="makeorange">book-a-meal</a> All Rights Reserved
+</div>
 
 <script type="text/javascript">
 	
