--- a/UI/customer-order.html
+++ b/UI/customer-order.html
@@ -54,6 +54,13 @@
 <h4 class="lotsofspace">Logout <a href="#" class ="makeorange">here</a></h4>
 
 
+
+<div class="spacing"></div>
+<hr>
+<div class="centerfooter">
+	Copyright © 2018, <a href="index.html" class="makeorange">book-a-meal</a> All Rights Reserved
+</div>
+
 <script type="text/javascript">
 	var tooltip = document.getElementById("thirdadminitem");
 	tip(tooltip);
