--- a/UI/order-summary.html
+++ b/UI/order-summary.html
@@ -32,7 +32,8 @@
 </div>
 
 <div class="mycontainer">
-  <h3><a class="makegreen" href="customer-order.html">&#8592;Go Back?</a></h3>
+  <h3><a class="makegreen" href="index.html">&#8592;Go Back?</a></h3>
+  <a href="login.html"><button  class="buttongreen"   >Login</button></a><br>
 	<h2>View Current Order Summary</h2><br>
 
 <p class="makeorange"><b>NB: This page displays 'NO CURRENT ORDER!' if no order has been made.</b></p>
@@ -77,7 +78,7 @@
 	
 </div>
 
-<h4 class="lotsofspace">Logout <a href="#" class ="makeorange">here</a></h4>
+<h4 class="lotsofspace">Logout <a href="index.html" class ="makeorange">here</a></h4>
 
 
 
@@ -90,6 +91,8 @@
 <script type="text/javascript">
 	var tooltip = document.getElementById("fifthadminitem");
 	tip(tooltip);
+
+  alert('Please login to complete order!');
 </script>
 
 
