--- a/UI/order-summary.html
+++ b/UI/order-summary.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="stylesheet" type="text/css" href="css/buttonstyle.css">
   <link rel="stylesheet" type="text/css" href="css/mobileview.css">
+  <link rel="stylesheet" type="text/css" href="css/login.html">
 	<script type="text/javascript" src="js/createpopup.js"></script>
 </head>
 <body>
@@ -66,14 +67,14 @@
     <td></td>
     </tr>
 
-  <tfoot>
+  <tr>
     <td class="makered" style="text-align: center;">* Dispatch would send a delivery confirmation upon delivery. Order would then be moved to 'All Order History Page'</td>
     <td></td>
     <td></td>
     <td></td>
     <td></td>
     <td></td>
-  </tfoot>
+  </tr>
 </table>
 	
 </div>
