UI update from feedback

--- a/UI/admin/admin-management.html
+++ b/UI/admin/admin-management.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no" />
 	<title>Admin-Management</title>
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
   <link rel="stylesheet" type="text/css" href="../css/buttonstyle.css">
   <link rel="stylesheet" type="text/css" href="../css/mobileview.css">
 	<script type="text/javascript" src="../js/createpopup.js"></script>
 </head>
-<body>
+<body style="overflow-x: hidden;">
 	<div class="wrapper">
 
 <div class="left">
@@ -17,6 +17,8 @@
 	<li><a href="login.html">Home</a></li>
     <li><a href="admin-management.html">Admin Management</a></li>
     <li><a href="admin-order-history.html">All Order History</a></li>
+    <li><a href="set-daily-menu.html">Set Daily Menu</a></li>
+    <li><a href="view-today-order.html">View Today Order</a></li>
 	
 	
 	
@@ -24,31 +26,33 @@
 </div>
 
 <div class="right" >
-	<p><a href="../index.html" target="_blank">View Site</a></p>
+	<ul>
+  <li class="firstadminitemq"><a href="../index.html" target="_blank">View Site</a></li>
+  </ul>
 </div>
 
 </div>
 
 <div class="mycontainer">
-	<h2>Add, Modify or Delete a Meal!</h2>
+	<h2>Add a Meal!</h2>
 	<!--new fiel alert-->
   <form method="post" enctype="multipart/form-data" id="myform">
     <div>
-<h4>Add a meal <input type="text" name="">
-   </h4>
+<h4>Add a meal </h4><input class="cetraliz" type="text" name="">
+   
   </div>
-  <div><h4>Add price
-    <input type="number" name=""></h4>
+  <div><h4>Add price</h4>
+    <input class="cetraliz" type="number" name="">
   </div>
-  <div><h4>Upload meal image
-    <input class="buttonblue" type="file" name=""></h4>
+  <div><h4>Upload meal image</h4>
+    <input class="buttonblue" type="file" name="">
   </div>
 
  <button class="buttongreen" type="submit" disabled>submit</button>
 
   </form>
 
-<table style="width:80%">
+<table>
   <caption><b>ALL AVAILABLE MEALS</b></caption>
   <tr>
     <th>Meal Available</th>
@@ -61,79 +65,79 @@
     <td>Iyan and Eforiro</td>
     <td>₦1,000</td>
     <td>YYYY-MM-DD HH:MI:SS.</td>
-    <td><a href="#"><button type="submit" class="buttonblue">modify meal</button></a></td>
-    <td><a href="#"><button type="submit" class="buttonred">delete meal *</button></a></td>
+    <td><a href="modifymeal.html"><button type="button" class="buttonblue">modify meal</button></a></td>
+    <td><a href="#"><button type="button" class="buttonred">delete meal *</button></a></td>
   </tr>
   <tr>
     <td>Rice and Chicken</td>
     <td>₦1,500</td>
     <td>YYYY-MM-DD HH:MI:SS.</td>
-    <td><a href="#"><button type="submit" class="buttonblue">modify meal</button></a></td>
-    <td><a href="#"><button type="submit" class="buttonred">delete meal *</button></a></td>
+    <td><a href="modifymeal.html"><button type="button" class="buttonblue">modify meal</button></a></td>
+    <td><a href=""><button type="button" class="buttonred">delete meal *</button></a></td>
   </tr>
 
   <tr>
     <td>Beans</td>
     <td>₦1,000</td>
     <td>YYYY-MM-DD HH:MI:SS.</td>
-    <td><a href="#"><button type="submit" class="buttonblue">modify meal</button></a></td>
-    <td><a href="#"><button type="submit" class="buttonred">delete meal *</button></a></td>
+    <td><a href="modifymeal.html"><button type="button" class="buttonblue">modify meal</button></a></td>
+    <td><a href="#"><button type="button" class="buttonred">delete meal *</button></a></td>
   </tr>
 
   <tr>
     <td>Salad</td>
     <td>₦2,000</td>
     <td>YYYY-MM-DD HH:MI:SS.</td>
-    <td><a href="#"><button type="submit" class="buttonblue">modify meal</button></a></td>
-    <td><a href="#"><button type="submit" class="buttonred">delete meal *</button></a></td>
+    <td><a href="modifymeal.html"><button type="button" class="buttonblue">modify meal</button></a></td>
+    <td><a href="#"><button type="button" class="buttonred">delete meal *</button></a></td>
   </tr>
 
   <tr>
     <td>Fish</td>
-    <td>₦1,000</td>
+    <td>₦1,000</td> 
     <td>YYYY-MM-DD HH:MI:SS.</td>
-    <td><a href="#"><button type="submit" class="buttonblue">modify meal</button></a></td>
-    <td><a href="#"><button type="submit" class="buttonred">delete meal *</button></a></td>
+    <td><a href="modifymeal.html"><button type="button" class="buttonblue">modify meal</button></a></td>
+    <td><a href="#"><button type="button" class="buttonred">delete meal *</button></a></td>
   </tr>
 
   <tr>
     <td>Turkey</td>
     <td>₦1,000</td>
     <td>YYYY-MM-DD HH:MI:SS.</td>
-    <td><a href="#"><button type="submit" class="buttonblue">modify meal</button></a></td>
-    <td><a href="#"><button type="submit" class="buttonred">delete meal *</button></a></td>
+    <td><a href="modifymeal.html"><button type="button" class="buttonblue">modify meal</button></a></td>
+    <td><a href="#"><button type="button" class="buttonred">delete meal *</button></a></td>
   </tr>
 
   <tr>
     <td>Smallchops</td>
     <td>₦1,000</td>
     <td>YYYY-MM-DD HH:MI:SS.</td>
-    <td><a href="#"><button type="submit" class="buttonblue">modify meal</button></a></td>
-    <td><a href="#"><button type="submit" class="buttonred">delete meal *</button></a></td>
+    <td><a href="modifymeal.html"><button type="button" class="buttonblue">modify meal</button></a></td>
+    <td><a href="#"><button type="button" class="buttonred">delete meal *</button></a></td>
   </tr>
 
   <tr>
     <td>Yam and Egg</td>
     <td>₦2,000</td>
     <td>YYYY-MM-DD HH:MI:SS.</td>
-    <td><a href="#"><button type="submit" class="buttonblue">modify meal</button></a></td>
-    <td><a href="#"><button type="submit" class="buttonred">delete meal *</button></a></td>
+    <td><a href="modifymeal.html"><button type="button" class="buttonblue">modify meal</button></a></td>
+    <td><a href="#"><button type="button" class="buttonred">delete meal *</button></a></td>
   </tr>
 
   <tr>
     <td>Suya</td>
     <td>₦1,000</td>
     <td>YYYY-MM-DD HH:MI:SS.</td>
-    <td><a href="#"><button type="submit" class="buttonblue">modify meal</button></a></td>
-    <td><a href="#"><button type="submit" class="buttonred">delete meal *</button></a></td>
+    <td><a href="modifymeal.html"><button type="button" class="buttonblue">modify meal</button></a></td>
+    <td><a href="#"><button type="button" class="buttonred">delete meal *</button></a></td>
   </tr>
 
   <tr>
     <td>Chips</td>
     <td>₦1,000</td>
     <td>YYYY-MM-DD HH:MI:SS.</td>
-    <td><a href="#"><button type="submit" class="buttonblue">modify meal</button></a></td>
-    <td><a href="#"><button type="submit" class="buttonred">delete meal *</button></a></td>
+    <td><a href="modifymeal.html"><button type="button" class="buttonblue">modify meal</button></a></td>
+    <td><a href="#"><button type="button" class="buttonred">delete meal *</button></a></td>
   </tr>
 
 
