--- a/UI/admin/modifymeal.html
+++ b/UI/admin/modifymeal.html
@@ -43,7 +43,7 @@
 <div class="container">
 
 
-<form>
+<form enctype="multipart/form-data">
 
 	<div>
 		<h2>Admin Login </h2>
@@ -51,22 +51,21 @@
 	
 
 	<div>
-		<label><b>Email Address</b></label><br>
-		<input type="email" name="mailsddr" placeholder="email"><br>
+		<label><b>Edit Meal Name</b></label><br>
+		<input type="text" name="mailsddrf" placeholder="Bread and Beans"><br>
 		<div class="spacing"></div>
 		
 	</div>
 
 	<div>
-		<label><b>Password</b></label><br>
-		<input type="password" name="passerr" id="adminp" ><br>
+		<label><b>Edit Meal Price</b></label><br>
+		<input type="number" name="mailsddrft" placeholder="1000"><br>
 		<div class="spacing"></div>
+		
 	</div>
-
 	<div>
-		<label><b>Confirm Password</b></label><br>
-		<input type="password" name="passerr2" id="adminp2"><br>
-		<div class="spacing">&nbsp;<div id="adminmatch"></div></div>
+		<label><b>Upload New Picture</b></label><br>
+		<input class="buttonblue" type="file" name="">
 	</div>
 
 	<div>
