--- a/UI/login.html
+++ b/UI/login.html
@@ -25,6 +25,7 @@
 <div class="right" >
 	<ul>
     <li class="firstadminitemq"><a href="signup.html"">Signup</a></li>
+    <li><a href="admin/login.html">Admin</a></li>
   </ul>
 </div>
 
