--- a/UI/admin/set-daily-menu.html
+++ b/UI/admin/set-daily-menu.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no" />
 	<title>Set-Daily-Menu</title>
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
   <link rel="stylesheet" type="text/css" href="../css/buttonstyle.css">
+  <link rel="stylesheet" type="text/css" href="../css/login.css">
   <link rel="stylesheet" type="text/css" href="../css/mobileview.css">
+  <link rel="stylesheet" type="text/css" href="../css/dailymenu.css">
 	<script type="text/javascript" src="../js/createpopup.js"></script>
+
+  
 </head>
 <body>
 	<div class="wrapper">
@@ -17,6 +21,8 @@
 	<li><a href="login.html">Home</a></li>
     <li><a href="admin-management.html">Admin Management</a></li>
     <li><a href="admin-order-history.html">All Order History</a></li>
+    <li><a href="set-daily-menu.html">Set Daily Menu</a></li>
+    <li><a href="view-today-order.html">View Today Order</a></li>
   
 	
 	
@@ -24,106 +30,82 @@
 </div>
 
 <div class="right" >
-	<p><a href="../index.html" target="_blank">View Site</a></p>
+	<ul>
+  <li class="firstadminitemq"><a href="../index.html" target="_blank">View Site</a></li>
+  </ul>
 </div>
 
 </div>
+<div id="toptxt">
+  <h1>Select Menu For the Day</h1><br>
+</div>
 
-<div class="mycontainer">
+<div class="homefl">
 
-<div id="menuset">
-  <h2>Set Menu For Today:</h2>
-  <form method="post">
-      <input type="checkbox" name="food" value="ricenchicken" ><b> rice and chicken</b><br><div class="spacing"></div>
-      <input type="checkbox" name="food" value="beansnbread"><b> beans and bread</b><br>
+<div class="outfl" id="applymovemnet">
+  <form  method="post">
+  
+      <b > rice and chicken--------------------</b><input type="checkbox" name="food" value="ricenchicken"  "><br><div class="spacing"></div>
+      <b> beans and bread---------------------</b><input type="checkbox" name="food" value="beansnbread"><br>
       <div class="spacing"></div>
-   <input type="checkbox" name="food" value="smallchops"> <b>smallchops</b><br> 
+    <b>smallchops and chips---------------</b><input type="checkbox" name="food" value="smallchops"><br> 
    <div class="spacing"></div>
-   <input type="checkbox" name="food" value="salad"> <b>salad</b><br>
+    <b>salad and smoothie------------------</b><input type="checkbox" name="food" value="salad"><br>
    <div class="spacing"></div>
-   <input type="checkbox" name="food" value="fishndrink"><b> fish and drink</b><br>
+   <b> fish and drink-------------------------</b><input type="checkbox" name="food" value="fishndrink"><br>
    <div class="spacing"></div>
-   <input type="checkbox" name="food" value="suyankunu"><b> suya and kunu</b><br>
+   <b> suya and kunu--------------------------</b><input type="checkbox" name="food" value="suyankunu"><br>
    <div class="spacing"></div>
-   <input class="buttonblue" type="submit" value="submit"><br>
-  </form>
+   
+  
+</div>
+ 
+ <div class="outfl">
 
+
+      <b > rice and chicken--------------------</b><input type="checkbox" name="food" value="ricenchicken"  "><br><div class="spacing"></div>
+      <b> beans and bread---------------------</b><input type="checkbox" name="food" value="beansnbread"><br>
+      <div class="spacing"></div>
+    <b>smallchops and chips---------------</b><input type="checkbox" name="food" value="smallchops"><br> 
+   <div class="spacing"></div>
+    <b>salad and smoothie------------------</b><input type="checkbox" name="food" value="salad"><br>
+   <div class="spacing"></div>
+   <b> fish and drink-------------------------</b><input type="checkbox" name="food" value="fishndrink"><br>
+   <div class="spacing"></div>
+   <b> suya and kunu--------------------------</b><input type="checkbox" name="food" value="suyankunu"><br>
+   <div class="spacing"></div>
+
+  
 
 </div>
 
+<div class="outfl">
+      <b > rice and chicken--------------------</b><input type="checkbox" name="food" value="ricenchicken"  "><br><div class="spacing"></div>
+      <b> beans and bread---------------------</b><input type="checkbox" name="food" value="beansnbread"><br>
+      <div class="spacing"></div>
+    <b>smallchops and chips---------------</b><input type="checkbox" name="food" value="smallchops"><br> 
+   <div class="spacing"></div>
+    <b>salad and smoothie------------------</b><input type="checkbox" name="food" value="salad"><br>
+   <div class="spacing"></div>
+   <b> fish and drink-------------------------</b><input type="checkbox" name="food" value="fishndrink"><br>
+   <div class="spacing"></div>
+   <b> suya and kunu--------------------------</b><input type="checkbox" name="food" value="suyankunu"><br>
+   <div class="spacing"></div>
 
-  <div>
-	<h2>Today's Orders</h2>
-<h4>Here is a list of all orders today so far. </h4>
-
-
-<table style="width:50%">
-  <caption><b>Total Orders Today</b></caption>
-  <tr>
-    <th>Name</th>
-    <th>Meal Ordered</th>
-    <th>Order Date and Time</th>
-    <th>Status</th>
-    <th>Price</th>
-  </tr>
-  <tr>
-    <td>Qwerty Ajala</td>
-    <td>Iyan and Eforiro</td>
-    <td>YYYY-MM-DD HH:MI:SS.</td>
-    <td class="makered">Pending *</td>
-    <td>1,000</td>
-  </tr>
-  <tr>
-    <td>Yala Tola</td>
-    <td>Fish</td>
-    <td>YYYY-MM-DD HH:MI:SS.</td>
-    <td class="makegreen">Delivered</td>
-    <td>1,000</td>
-  </tr>
-
-  <tr>
-    <td>Tonye Goke</td>
-    <td>Beans and Bread</td>
-    <td>YYYY-MM-DD HH:MI:SS.</td>
-    <td class="makegreen">Delivered</td>
-    <td>1,000</td>
-  </tr>
-
-  <tr>
-    <td>Fred Hammond</td>
-    <td>Salad</td>
-    <td>YYYY-MM-DD HH:MI:SS.</td>
-    <td class="makegreen">Delivered</td>
-   <td>1,000</td>
-  </tr>
-
-  <tr>
-    <td>Kula Sala</td>
-    <td>Small Chops</td>
-    <td>YYYY-MM-DD HH:MI:SS.</td>
-    <td class="makegreen">Delivered</td>
-    <td>1,000</td>
-  </tr>
-
-  <tfoot>
-    <tr>
-  	<td class="makegreen"> * a list of all the orders made on this site today.</td>
-  	<td></td>
-  	<td></td>
-  	<td></td>
-    <td></td>
-    </tr>
-  </tfoot>
-</table>
 </div>
-	
+ 
+  
+  	
 </div>
+<button class="button" type="submit" >submit</button><br>
+   </form>
 
 
 
 <div class="spacing"></div>
-<hr>
-<div class="centerfooter">
+
+<div class="centerfooter" id="dropfoot">
+  <hr>
   Copyright © 2018, <a href="../index.html" class="makeorange">book-a-meal</a> All Rights Reserved
 </div>
 
