--- a/UI/admin/view-today-order.html
+++ b/UI/admin/view-today-order.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no" />
-	<title>admin-order-history</title>
+	<title>Set-Daily-Menu</title>
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
   <link rel="stylesheet" type="text/css" href="../css/buttonstyle.css">
   <link rel="stylesheet" type="text/css" href="../css/mobileview.css">
 	<script type="text/javascript" src="../js/createpopup.js"></script>
 </head>
-<body style="overflow-x: hidden;">
+<body>
 	<div class="wrapper">
 
 <div class="left">
@@ -20,48 +20,49 @@
     <li><a href="set-daily-menu.html">Set Daily Menu</a></li>
     <li><a href="view-today-order.html">View Today Order</a></li>
   
-  
-	
 	
 	
 	</ul>
 </div>
 
 <div class="right" >
-	<ul>
-  <li class="firstadminitemq"><a href="../index.html" target="_blank">View Site</a></li>
+  <ul>
+	<li class="firstadminitemq"><a href="../index.html" target="_blank">View Site</a></li>
   </ul>
 </div>
 
 </div>
 
 <div class="mycontainer">
-	<h2>Admin Order History</h2>
 
-<p class="makered" style="text-align: left;"><b>NB: Deleted * orders cannot be gotten back. Be cautious!</b></p>
+
+
+  <div>
+	<h2 id="tdyord">Today's Orders</h2>
+
 
 <table >
-  <caption><b>ORDER HISTORY</b></caption>
+ 
   <tr>
     <th>Name</th>
     <th>Meal Ordered</th>
     <th>Order Date and Time</th>
     <th>Status</th>
-    <th>Delete Order</th>
+    <th>Price</th>
   </tr>
   <tr>
     <td>Qwerty Ajala</td>
     <td>Iyan and Eforiro</td>
     <td>YYYY-MM-DD HH:MI:SS.</td>
-    <td class="makegreen">Delivered</td>
-    <td><a href="#"><button type="submit" class="buttonred">delete order *</button></a></td>
+    <td class="makered">Pending *</td>
+    <td>1,000</td>
   </tr>
   <tr>
     <td>Yala Tola</td>
     <td>Fish</td>
     <td>YYYY-MM-DD HH:MI:SS.</td>
     <td class="makegreen">Delivered</td>
-    <td><a href="#"><button type="submit" class="buttonred">delete order *</button></a></td>
+    <td>1,000</td>
   </tr>
 
   <tr>
@@ -69,7 +70,7 @@
     <td>Beans and Bread</td>
     <td>YYYY-MM-DD HH:MI:SS.</td>
     <td class="makegreen">Delivered</td>
-    <td><a href="#"><button type="submit" class="buttonred">delete order *</button></a></td>
+    <td>1,000</td>
   </tr>
 
   <tr>
@@ -77,7 +78,7 @@
     <td>Salad</td>
     <td>YYYY-MM-DD HH:MI:SS.</td>
     <td class="makegreen">Delivered</td>
-    <td><a href="#"><button type="submit" class="buttonred">delete order *</button></a></td>
+   <td>1,000</td>
   </tr>
 
   <tr>
@@ -85,12 +86,12 @@
     <td>Small Chops</td>
     <td>YYYY-MM-DD HH:MI:SS.</td>
     <td class="makegreen">Delivered</td>
-    <td><a href="#"><button type="submit" class="buttonred">delete order *</button></a></td>
+    <td>1,000</td>
   </tr>
 
   <tfoot>
     <tr>
-  	<td class="makeblue"> * a list of all the orders made on this site so far.</td>
+  	<td class="makegreen"> * a list of all the orders made on this site today.</td>
   	<td></td>
   	<td></td>
   	<td></td>
@@ -98,6 +99,7 @@
     </tr>
   </tfoot>
 </table>
+</div>
 	
 </div>
 
@@ -109,7 +111,6 @@
   <hr>
   Copyright © 2018, <a href="../index.html" class="makeorange">book-a-meal</a> All Rights Reserved
 </div>
-
 
 <script type="text/javascript">
 	
