--- a/UI/index.html
+++ b/UI/index.html
@@ -38,7 +38,7 @@
 
 <div class="section group">
   <div class="grid_1_of_4 images_1_of_4">
-              <a href="order-summary.html"><img src="images/beans3.jpg" alt=""></a>
+              <a href="order-summary.html"><img src="images/food11.JPG" alt=""></a>
               <h2>Beans and Bread </h2>
               <p><a href="order-summary.html"><button class="buttongreen">Book-A-Meal</button></a></p>
               <p><span class="price">₦1000.00</span></p>
